# data-extraction-and-nlp

./: Data_Extraction_and_NLP.ipynb  README.md  pyproject.toml
data_extraction_and_nlp/: article_extractor.py  custom_inputs.py  nlp.py
data_extraction_and_nlp/extracted_articles/: 14900.6.txt  17671.4.txt  20442.2.txt  2345.0.txt  33372.6.txt  33834.4.txt  37528.8.txt  40761.4.txt  41223.2.txt  4279.2.txt  43070.4.txt  5664.6.txt  8435.4.txt
